crates/rtm-cli/tests/snapshots/surface_snapshots__doctor_output_is_stable.snap
---
source: crates/rtm-cli/tests/surface_snapshots.rs
expression: normalize_doctor(&output_stdout(output))
---
rtmd
  version             [version]
  protocol            0.5
  capabilities        structured_protocol_errors, headless_stdio_log_paths, status_session_set_filter, status_updated_since_filter, typed_nudge_outcomes, validate_target_preflight, events_cursor, events_long_poll, tmux_pane_snapshot, kill_outcomes
  socket              [socket]
  uptime              [uptime]
sqlite
  applied migrations  2 of 2 (lifecycle, probe state)
lifecycles
  forking             0
  running             0
  exited              0
  lost                0
process exit watchers 0
shim sockets          0
event waiters         0
launchers
  claude              [command]
  codex               [command]
tmux                  [availability]
last probe sweep      [timestamp]
recent lost           (none in last 24h)
