crates/rtm-cli/tests/snapshots/surface_snapshots__session_facing_cli_json_outputs_are_stable.snap
---
source: crates/rtm-cli/tests/surface_snapshots.rs
expression: snapshot
---
{
  "doctor": {
    "last_probe_sweep": "[timestamp]",
    "launchers": [
      {
        "command": "[command]",
        "error": "[launcher_error]",
        "runtime": "claude"
      },
      {
        "command": "[command]",
        "error": "[launcher_error]",
        "runtime": "codex"
      }
    ],
    "lifecycles": {
      "exited": "[count]",
      "forking": "[count]",
      "lost": "[count]",
      "running": "[count]"
    },
    "log_availability": [
      {
        "log_availability": {
          "payload": {
            "stderr_path": "[path]",
            "stdout_path": "[path]"
          },
          "type": "headless"
        },
        "session_id": "[uuid]"
      }
    ],
    "recent_lost": [],
    "socket_path": "[socket]",
    "sqlite": {
      "applied": 2,
      "applied_descriptions": [
        "lifecycle",
        "probe state"
      ],
      "pending_descriptions": [],
      "total": 2
    },
    "tmux": {
      "available": "[tmux]",
      "error": "[launcher_error]",
      "version": "[version]"
    },
    "uptime_secs": "[uptime]",
    "version": {
      "capabilities": [
        "structured_protocol_errors",
        "headless_stdio_log_paths",
        "status_session_set_filter",
        "status_updated_since_filter",
        "typed_nudge_outcomes",
        "validate_target_preflight",
        "events_cursor",
        "events_long_poll",
        "tmux_pane_snapshot"
      ],
      "git_sha": "[git_sha]",
      "protocol_version": "0.4",
      "version": "[version]"
    },
    "watchers": {
      "event_waiters": 0,
      "process_exit_watchers": "[count]",
      "shim_sockets": "[count]"
    }
  },
  "events": [
    {
      "payload": {
        "runtime_pid": "[pid]",
        "session_id": "[uuid]",
        "start_time": "[timestamp]"
      },
      "type": "running"
    },
    {
      "payload": {
        "evidence": "shim_exit",
        "exit_code": null,
        "session_id": "[uuid]",
        "signal": 15
      },
      "type": "terminated"
    }
  ],
  "kill": {
    "session_id": "[uuid]"
  },
  "nudge_error": {
    "code": "runtime_error",
    "message": "[message]"
  },
  "spawn": {
    "payload": {
      "event": {
        "payload": {
          "runtime_pid": "[pid]",
          "session_id": "[uuid]",
          "start_time": "[timestamp]"
        },
        "type": "running"
      },
      "lifecycle": {
        "log_availability": {
          "payload": {
            "stderr_path": "[path]",
            "stdout_path": "[path]"
          },
          "type": "headless"
        },
        "runtime": "claude",
        "runtime_pid": "[pid]",
        "session_id": "[uuid]",
        "shim_pid": "[pid]",
        "start_time": "[timestamp]",
        "state": "running",
        "tmux_pane": "[tmux_pane]"
      },
      "log_dir": "[path]",
      "stderr_path": "[path]",
      "stdout_path": "[path]"
    },
    "type": "spawned"
  },
  "status": [
    {
      "log_availability": {
        "payload": {
          "stderr_path": "[path]",
          "stdout_path": "[path]"
        },
        "type": "headless"
      },
      "runtime": "claude",
      "runtime_pid": "[pid]",
      "session_id": "[uuid]",
      "shim_pid": "[pid]",
      "start_time": "[timestamp]",
      "state": {
        "exited": {
          "code": null,
          "signal": 15
        }
      },
      "tmux_pane": "[tmux_pane]"
    }
  ],
  "version": {
    "capabilities": [
      "structured_protocol_errors",
      "headless_stdio_log_paths",
      "status_session_set_filter",
      "status_updated_since_filter",
      "typed_nudge_outcomes",
      "validate_target_preflight",
      "events_cursor",
      "events_long_poll",
      "tmux_pane_snapshot"
    ],
    "git_sha": "[git_sha]",
    "protocol_version": "0.4",
    "version": "[version]"
  }
}
