crates/rtm-cli/tests/snapshots/surface_snapshots__status_json_output_is_stable.snap
---
source: crates/rtm-cli/tests/surface_snapshots.rs
expression: rows
---
[
  {
    "runtime": "claude",
    "runtime_pid": "[pid]",
    "session_id": "[uuid]",
    "shim_pid": "[pid]",
    "start_time": "[timestamp]",
    "state": "running",
    "tmux_pane": "3:2.1"
  }
]
